Corrected vertical alignment

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,15 @@
 body {
   background-color: black;
   font-family: "Overpass", sans-serif;
-  max-width: 375px;
-  max-height: 100vh;
+  max-width: 1440px;
+  height: 100vh;
   line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  max-width: 100vw !important;
 }
 
 h1 {
@@ -23,6 +29,10 @@ img {
   width: 20px;
 }
 
+footer {
+  padding-top: 20px;
+}
+
 .rating {
   border-radius: 50%;
   border: none;
@@ -40,9 +50,8 @@ img {
 
 .rating-screen {
   display: block;
-  width: 80%;
+  width: 300px;
   height: 300px;
-  margin: 100px auto;
   background-color: hsl(213, 19%, 18%);
   padding: 30px 30px;
   border-radius: 20px;
@@ -117,21 +126,14 @@ img {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 400px) {
+@media (max-width: 800px) {
   .rating-screen {
     display: block;
     width: 300px;
     height: 300px;
-    margin: 0 auto;
     background-color: hsl(213, 19%, 18%);
-    padding: 30px 30px;
     border-radius: 20px;
-  }
-
-  body {
-    display: block;
-    margin: 150px auto 0px auto;
-    height: 500px;
+    margin: 0px;
   }
 
   .attribution {
